# Name-Entity-Recognition-Ml-Project

./: .dockerignore  .env.example  .env.production  DEPLOYMENT.md  Dockerfile  PIPELINE_SETUP.md  README.md  app.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.md  k8s-backend-deployment.yaml  k8s-frontend-deployment.yaml  k8s-namespace-config-hpa.yaml  k8s-network-policy.yaml  k8s-production-config.yaml  main.py  ner.py  pyproject.toml
.github/workflows/: build-and-deploy.yml  build-and-push.yml  build-and-test.yml  deploy-k8s.yml  docker-build-test.yml  docker-scout.yml
ner_model/: config.cfg
ner_model/parser/: model
ner_model/vocab/: strings.json
scripts/: build-and-push.sh  build.sh  deploy.sh  dev-setup.sh  health-check.sh  rollback.sh
ui/: Dockerfile  bun.lockb  index.html  minikube-linux-amd64  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/analysis/: BatchAnalysis.tsx  SingleAnalysis.tsx
ui/src/components/common/: HistoryPanel.tsx  ParticleField.tsx  Typewriter.tsx
ui/src/components/entities/: EntityBadge.tsx  EntityCard.tsx  HighlightedText.tsx
ui/src/components/layout/: ApiSidebar.tsx  Header.tsx  Hero.tsx
ui/src/hooks/: useNER.ts
ui/src/pages/: Index.tsx
ui/src/services/: nerApi.ts
ui/src/stores/: useAppStore.ts
ui/src/types/: ner.ts
ui/src/utils/: entityStyle.ts
